--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ This file documents the revision history for Perl web application WomenInBotany.
 
 {{$NEXT}}
 
+    - Change login form to requiring https
+
+
 0.22      2016-09-20 09:49:54+02:00 Europe/Berlin
 
     - New links can be added
