--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ This file documents the revision history for Perl web application WomenInBotany.
 
 {{$NEXT}}
 
+    - Sanitize mixed content blocking by Firefox
+
 0.23      2016-09-22 12:03:02+02:00 Europe/Berlin
 
     - Change login form to requiring https
