--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ This file documents the revision history for Perl web application WomenInBotany.
 
 {{$NEXT}}
 
+    - Allow short uri (e.g. www.perl.com) as link uri
+
 0.24      2016-09-22 13:54:19+02:00 Europe/Berlin
 
     - Sanitize mixed content blocking by Firefox
